src/objects/Family_Story_Guide_Questionare__c.object
<CustomObject>
    <fields>
        <fullName>Family_Story_Guide_Questionnaire_EID__c</fullName>
        <description>External ID for migrating of these configuration records across environments.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Family Story Guide Questionnaire EID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Intervention</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Searching_Tips__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Steps/Searching Tips</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuestionNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Order__c</fullName>
        <label>Question Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A) Never</fullName>
                </value>
                <value>
                    <fullName>H) N/A</fullName>
                </value>
                <value>
                    <fullName>B) Sometimes</fullName>
                </value>
                <value>
                    <fullName>C) Usually</fullName>
                </value>
                <value>
                    <fullName>D) Always</fullName>
                </value>
                <value>
                    <fullName>A) Yes</fullName>
                </value>
                <value>
                    <fullName>B) No</fullName>
                </value>
                <value>
                    <fullName>A) Food</fullName>
                </value>
                <value>
                    <fullName>B) Medicine</fullName>
                </value>
                <value>
                    <fullName>C) Electricity</fullName>
                </value>
                <value>
                    <fullName>D) Heating or Air Conditioning</fullName>
                </value>
                <value>
                    <fullName>E) Mortgage or Rent</fullName>
                </value>
                <value>
                    <fullName>F) Transportation</fullName>
                </value>
                <value>
                    <fullName>I) None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance and Finance</fullName>
                </value>
                <value>
                    <fullName>Caregiver Support</fullName>
                </value>
                <value>
                    <fullName>Social Determinants</fullName>
                </value>
                <value>
                    <fullName>Experience with Providers</fullName>
                </value>
                <value>
                    <fullName>Education and Schools</fullName>
                </value>
                <value>
                    <fullName>Transition to Adulthood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hoverHelpText__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>hoverHelpText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Family Story Guide Questionare</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuestionNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Story Guide Questionare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Story Guide Questionare</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>